--- a/src/templates/dashboard/base_dashboard.html
+++ b/src/templates/dashboard/base_dashboard.html
@@ -744,6 +744,8 @@
         });
     </script>
 
+    {% block scripts %}{% endblock %}
+
     <!-- Modal Login -->
     <div id="loginModal" class="modal-overlay">
         <div class="modal-container split-design">
