--- a/src/templates/administracion/crear_usuario.html
+++ b/src/templates/administracion/crear_usuario.html
@@ -123,7 +123,7 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="fecha_nacimiento">Fecha de Nacimiento</label>
-                    <input type="date" name="fecha_nacimiento" id="fecha_nacimiento">
+                    <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" max="{% now 'Y-m-d' %}">
                 </div>
                 <div class="form-group">
                     <label for="genero">Género</label>
