--- a/src/templates/usuario/editar_perfil.html
+++ b/src/templates/usuario/editar_perfil.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="form-group">
                     <label for="fecha_nacimiento">Fecha de Nacimiento</label>
-                    <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" value="{{ persona.fecha_nacimiento|date:'Y-m-d'|default:'' }}">
+                    <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" value="{{ persona.fecha_nacimiento|date:'Y-m-d'|default:'' }}" max="{% now 'Y-m-d' %}">
                 </div>
             </div>
             <div class="form-group">
