--- a/src/templates/usuario/registro.html
+++ b/src/templates/usuario/registro.html
@@ -315,7 +315,7 @@
                     </div>
                     <div class="form-group">
                         <label for="fecha_nacimiento">Fecha de Nacimiento</label>
-                        <input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
+                        <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" max="{% now 'Y-m-d' %}">
                     </div>
                 </div>
                 
